initialize site and general routing

--- a/idle_rpg/index.html
+++ b/idle_rpg/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
   <script src="./lib/rpgui.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
