--- a/idle_rpg/index.html
+++ b/idle_rpg/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <link href="./lib/rpgui.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Idle RPG!</title>
 </head>
 
 <body>
